--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </button>
             <div class="header__logo">
               <a href="" class="logo__link">
-                <img class="logo__link-img" src="Img/logo.svg" alt="logo">
+                <img class="logo__link-img" src="./img/logo.svg" alt="logo">
               </a>
           </div>
           </div>
@@ -91,7 +91,7 @@
                 </button>
               </div>
               <div class="hero__img">
-                <img  class="img__logo" src="/Project/Img/hero.png" alt="Логотип компании">
+                <img  class="img__logo" src="./img/hero.png" alt="Логотип компании">
               </div>
             </div>
           </div>
