--- a/index.html
+++ b/index.html
@@ -37,14 +37,16 @@
               </li>
               <li class="menu__item">
                 <div class="container__link">
-                  <p class="repair__text">Оставить заявку</p>
-                  <a href="" class="repair__link"></a>
+                  <a href="" class="repair__link">
+                    <p class="repair__text">Оставить заявку</p>
+                  </a>
                 </div>
               </li>
               <li class="menu__item">
                 <div class="container__link">
-                  <p class="checkstatus__text">Статус ремонта</p>
-                  <a href="" class="checkstatus__link"></a>
+                  <a href="" class="checkstatus__link">
+                    <p class="checkstatus__text">Статус ремонта</p>
+                  </a>
                 </div>
               </li>
             </ul>
