--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@
               </a>
           </div>
           </div>
-          <nav class="menu__body">
-            <ul class="menu__list">
-              <li class="menu__item menu__item-hidden">
+          <nav class="main-nav">
+            <ul class="main-nav__list">
+              <li class="main-nav__item main-nav__item-hidden">
                 <a href="" class="call__link"></a>
-              <li class="menu__item menu__item-hidden">
+              <li class="main-nav__item main-nav__item-hidden">
                 <a href="" class="chat__link"></a>
               </li>
-              <li class="menu__item menu__item-hidden">
+              <li class="main-nav__item main-nav__item-hidden">
                 <a href="" class="profile__link"></a>
               </li>
-              <li class="menu__item">
+              <li class="main-nav__item">
                 <div class="container__link">
                   <a href="" class="repair__link">
                     <p class="repair__text">Оставить заявку</p>
                   </a>
                 </div>
               </li>
-              <li class="menu__item">
+              <li class="main-nav__item">
                 <div class="container__link">
                   <a href="" class="checkstatus__link">
                     <p class="checkstatus__text">Статус ремонта</p>
